# egggold

./: README.md  collects.py  database.py  entity.py  main.py  projeto.txt  pyproject.toml  requirements.txt  storage.py
